--- a/index.html
+++ b/index.html
@@ -193,6 +193,87 @@
 
   <h2>Selected Publications</h2>
 
+  <div class="publication">
+    <b>Erik F. Alvarez</b>, Juan Camilo López, Andrés Ramos, and Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
+    <a href="https://doi.org/10.1016/j.segan.2024.101413" target="_blank">DOI</a>.
+
+    <div class="buttons">
+      <button onclick="toggle('abs1')">ABS</button>
+      <button onclick="toggle('bib1')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs1">
+      This paper presents a novel mixed-integer linear optimization formulation of the AC network-constrained, cost-based, integrated expansion planning problem. The formulation is used to determine the investment needs per technology including the location and sizing of new generation, energy storage, and transmission network assets in a future low-carbon power system. To reduce the size of the resulting problem, the AC optimal power flow (AC-OPF) model is represented in a compact way using cycle constraints. A bound tightening procedure is also considered to reduce the search space and improve the solver performance by adjusting the voltage bounds within the AC-OPF. Contrary to typically used formulations of the integrated expansion planning problem, the constraints considered here include all main aspects of system operation, namely unit commitment, energy storage system management, AC-OPF, and reactive power compensation. Thus, in this paper, we examine how both the proposed transmission expansion modeling developments and the interrelation of the integrated planning constraints affect the computation of the solution to the expansion planning problem. The performance of this formulation is assessed on the RTS-GMLC test system by computing the expansion plan and comparing it with the results of three other expansion planning formulations most frequently employed in the recent literature to address the integrated expansion planning problem for medium to large-scale systems. Expansion plans are computed and compared for different case studies and multiple scenarios. According to the comparative analysis, neglecting the AC-OPF or the unit commitment constraints can increase the total system costs by 7.10%–9.57% or 6.29%–8.39%, respectively. Unlike other modeling approaches, the proposed approach does not rely on simplifications that impact the quality of the solution. Thanks to the incorporated cycle-based AC-OPF constraints and the consideration of a bound tightening procedure, the computation time is reduced by 17.67%–27.21%.
+    </div>
+
+    <div class="bibtex" id="bib1">
+      @article{ALVAREZ2024101413,<br>
+        title = {An optimal expansion planning of power systems considering cycle-based AC optimal power flow},<br>
+        journal = {Sustainable Energy, Grids and Networks},<br>
+        volume = {39},<br>
+        pages = {101413},<br>
+        year = {2024},<br>
+        issn = {2352-4677},<br>
+        doi = {https://doi.org/10.1016/j.segan.2024.101413},<br>
+        url = {https://www.sciencedirect.com/science/article/pii/S2352467724001425},<br>
+        author = {Erik F. Alvarez and Juan Camilo López and Luis Olmos and Andres Ramos}<br>
+      }
+    </div>
+  </div>
+
+  <div class="publication">
+    <b>Erik F. Alvarez</b>, Pedro Sánchez-Martín, and Andrés Ramos. <em>Self-Scheduling for a Hydrogen-Based Virtual Power Plant in Day-Ahead Energy and Reserve Electricity Markets</em>.  2024 20th International Conference on the European Energy Market (EEM), Istanbul, Turkiye, 2024.
+    <a href="10.1109/EEM60825.2024.10608848" target="_blank">DOI</a>.
+    <div class="buttons">
+      <button onclick="toggle('abs3')">ABS</button>
+      <button onclick="toggle('bib3')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs3">
+        This study presents an innovative optimization model for the self-scheduling of a hydrogen-based virtual power plant (H2-VPP) that aims to thrive in day-ahead energy and reserve markets. At its core, the model seeks to optimize profits by integrating a mix of renewable sources, battery storage, electrolyzers, and hydrogen storage, highlighting the model's focus on both electricity and hydrogen networks within a unified operational framework. Designed to navigate the complexities of a VPP, the model excels at strategically managing diverse resources for energy and reserve markets, emphasizing optimal operation of all assets. It accounts for the interplay between electricity and hydrogen production, storage, and demand, and addresses the time constraints critical to increasing revenues and ensuring balanced supply. A case study demonstrates the model's effectiveness, highlighting the role of hydrogen storage in increasing renewable integration and revenues. This underscores the model's ability to leverage the unique dynamics of electricity and hydrogen within the H2-VPP, confirming its potential in a rapidly evolving energy landscape.
+    </div>
+
+    <div class="bibtex" id="bib3">
+      @INPROCEEDINGS{10608848,<br>
+        author={Alvarez, Erik F. and Sánchez-Martín, Pedro and Ramos, Andrés},<br>
+        booktitle={2024 20th International Conference on the European Energy Market (EEM)},<br>
+        title={Self-Scheduling for a Hydrogen-Based Virtual Power Plant in Day-Ahead Energy and Reserve Electricity Markets},<br>
+        year={2024},<br>
+        volume={},<br>
+        number={},<br>
+        pages={1-6},<br>
+        keywords={Renewable energy sources;Hydrogen storage;Costs;Navigation;Electricity;Hydrogen;Production;Day-ahead;electricity market;hydrogen;secondary reserves;virtual power plant},<br>
+        doi={10.1109/EEM60825.2024.10608848}<br>
+      }
+    </div>
+  </div>
+
+  <div class="publication">
+    <b>Erik F. Alvarez</b>, Luis Olmos, Andrés Ramos, Kyriaki Antoniadou-Plytaria, David Steen and Le Anh Tuan <em>Values and impacts of incorporating local flexibility services in transmission expansion planning</em>. Electric Power Systems Research, 2022.
+    <a href="https://doi.org/10.1016/j.epsr.2022.108480" target="_blank">DOI</a>
+    <div class="buttons">
+      <button onclick="toggle('abs4')">ABS</button>
+      <button onclick="toggle('bib4')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs4">
+        This paper presents a cost-based TSO-DSO coordination model to quantify the value of local flexibility services and analyze its impact on the transmission grid expansion and the system operation. Flexibility is provided to the DC power flow transmission grid model by microgrids within the integrated AC power flow distribution grid model. The model’s objective is to minimize the overall cost of transmission investments and procured flexibility and is achieved using a bilevel optimization approach where the power exchanges on all connected grid interfaces are controlled. Case studies using a combined test system of the IEEE RTS-96 transmission network interfacing multiple 33-bus distribution grids were performed to validate the model and assess the values and impacts of local flexibility on the transmission system expansion. The results showed that the proposed model modified the investment plan and dispatch of flexibility resources reducing the investment and operation cost of the transmission system.
+    </div>
+
+    <div class="bibtex" id="bib4">
+      @article{ALVAREZ2022108480,<br>
+        title = {Values and impacts of incorporating local flexibility services in transmission expansion planning},<br>
+        journal = {Electric Power Systems Research},<br>
+        volume = {212},<br>
+        pages = {108480},<br>
+        year = {2022},<br>
+        issn = {0378-7796},<br>
+        doi = {https://doi.org/10.1016/j.epsr.2022.108480},<br>
+        url = {https://www.sciencedirect.com/science/article/pii/S0378779622005958},<br>
+        author = {Erik F. Alvarez and Luis Olmos and Andrés Ramos and Kyriaki Antoniadou-Plytaria and David Steen and Le Anh Tuan},<br>
+      }
+    </div>
+  </div>
 
   <div class="publication">
     <b>Erik F. Alvarez</b>, Miguel Paredes, and Marcos J. Rider. <em>Semidefinite relaxation and generalised benders decomposition to solve the transmission expansion network and reactive power planning</em>. IET Generation, Transmission & Distribution, 2020.
