--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
   <h2>Tools</h2>
   <p>Contribution in open-source optimisation modelling tools:</p>
   <ul>
-    <li><strong>IIT-Comillas</strong> – <em>oHySEM - optimized Hybrid Systems for Energy and Market management</em> <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a></li>
-    <li><strong>IIT-Comillas</strong> – <em>openTEPES - open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em> <a href="https://opentepes.readthedocs.io/en/latest/">Link</a></li>
+    <li><strong>oHySEM</strong> – <em> optimized Hybrid Systems for Energy and Market management</em> <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a></li>
+    <li><strong>openTEPES</strong> – <em> open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em> <a href="https://opentepes.readthedocs.io/en/latest/">Link</a></li>
   </ul>
 
   <h2>Selected Projects</h2>
