--- a/index.html
+++ b/index.html
@@ -191,19 +191,19 @@
   <h2>Tools</h2>
   <p>Contribution in open-source optimisation modelling tools:</p>
   <ul>
-    <li><strong>oHySEM</strong> – <em> optimized Hybrid Systems for Energy and Market management</em> <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a></li>
-    <li><strong>openTEPES</strong> – <em> open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em> <a href="https://opentepes.readthedocs.io/en/latest/">Link</a></li>
+    <li><strong>oHySEM</strong> – <em> optimized Hybrid Systems for Energy and Market management</em>, <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a></li>.
+    <li><strong>openTEPES</strong> – <em> open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em>, <a href="https://opentepes.readthedocs.io/en/latest/">Link</a></li>.
   </ul>
 
   <h2>Selected Projects</h2>
   <p>Contribution in:</p>
   <ul>
-    <li><strong>RISE</strong> – <em>SCALE EU funded project - Smart Charging ALignment for Europe</em><a href="https://scale-horizon.eu/">Link</a></li>
+    <li><strong>RISE</strong> – <em>SCALE EU funded project - Smart Charging ALignment for Europe</em>, <a href="https://scale-horizon.eu/">Link</a></li>.
     <li><strong>IIT-Comillas</strong> – <em>DEFINER EU funded project - Flexible Electricity Demand Management in Markets with Very High Penetration of Renewable Energy</em></li>
-    <li><strong>IIT-Comillas</strong> – <em>openENTRANCE EU funded project - open ENergy TRansition ANalyses for a low-Carbon Economy</em> <a href="https://openentrance.eu/">Link</a></li>
+    <li><strong>IIT-Comillas</strong> – <em>openENTRANCE EU funded project - open ENergy TRansition ANalyses for a low-Carbon Economy</em>, <a href="https://openentrance.eu/">Link</a></li>.
     <li><strong>UNICAMP</strong> – <em>Introduction of the Semidefinite Relaxation Approach in Power System Optimisation Problems</em></li>
-    <li><strong>COES SINAC</strong> – <em>Verification Studies of the Peruvian Electricity System's Target Firm Reserve Margin Update 2017-2020</em> - <a href="https://www.coes.org.pe/Portal/Planificacion/MargenReserva/#">Link</a></li>
-    <li><strong>COES SINAC</strong> – <em>Transmission Plan Update 2017 - 2026 for the Peruvian Electricity System</em> - <a href="https://www.coes.org.pe/Portal/Planificacion/PlanTransmision/ActualizacionPTT">Link</a></li>
+    <li><strong>COES SINAC</strong> – <em>Verification Studies of the Peruvian Electricity System's Target Firm Reserve Margin Update 2017-2020</em>, <a href="https://www.coes.org.pe/Portal/Planificacion/MargenReserva/#">Link</a></li>.
+    <li><strong>COES SINAC</strong> – <em>Transmission Plan Update 2017 - 2026 for the Peruvian Electricity System</em>, <a href="https://www.coes.org.pe/Portal/Planificacion/PlanTransmision/ActualizacionPTT">Link</a></li>.
   </ul>
 
   <h2>Selected Publications</h2>
