--- a/index.html
+++ b/index.html
@@ -181,12 +181,14 @@
   </div>
 
   <h2>News</h2>
-  <p>Coming soon...</p>
+<!--  <p>Coming soon...</p>-->
 <!--  <p>I'm involved in projects like:</p>-->
-<!--  <ul>-->
-<!--    <li><strong>NordForsk</strong> – No-regret investments under uncertainty</li>-->
-<!--    <li><strong>EnergyFlex-SE</strong> – Flexibility from distributed energy resources</li>-->
-<!--  </ul>-->
+  <ul>
+    <li><strong>2025 - June</strong> – Abstract accepted related to H2-based virtual power plant for presentation at the EURO 2025 Leeds, <a href="https://euro2025leeds.uk/">Conference</a></li>
+    <li><strong>2025 - January</strong> – PhD Defense, Universidad Pontificia Comillas, Madrid, Spain, <a href="https://www.iit.comillas.edu/publicacion/tesis/es/10272/Improving_Modelling_for_Optimal_Expansion_Planning_of_Power_Transmission_Systems">Thesis</a></li>
+    <li><strong>2024 - October</strong> – New job position at RISE.
+    <li><strong>2024 - July</strong> – Participation in the EEM 2024 conference in Istanbul, Turkey. Presenting a paper on the self-scheduling of a hydrogen-based virtual power plant in day-ahead energy and reserve electricity markets, <a href="https://eem24.khas.edu.tr/">Conference</a></li>
+  </ul>
 
   <h2>Tools</h2>
   <p>Contribution in open-source optimisation modelling tools:</p>
