--- a/publications.html
+++ b/publications.html
@@ -125,6 +125,30 @@
 
   <h1>Publications</h1>
 
+  <h2>2025</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
+
+  <div class="publication">
+    <b>[PhD Thesis] - Erik F. Alvarez</b>. <em>Improving Modelling for Optimal Expansion Planning of Power Transmission Systems</em>. COMILLAS, 2025.
+    <a href="https://www.iit.comillas.edu/publicacion/tesis/es/10272/Improving_Modelling_for_Optimal_Expansion_Planning_of_Power_Transmission_Systems" target="_blank">DOI</a>
+    <div class="buttons">
+      <button onclick="toggle('abs11')">ABS</button>
+      <button onclick="toggle('bib11')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs11">
+        The transition to a zero-carbon economy requires significant advances in the design and operation of power systems. As fossil fuel power plants are phased out in favour of renewable energy sources, the industry faces pressing challenges in maintaining grid stability and reliability while minimising environmental impacts and costs. Traditional transmission expansion planning methods, which often rely on decomposition techniques that barely represent the future operation of power systems, fail to capture the complex interdependencies between generation, transmission, and distribution infrastructure, resulting in less-than-ideal expansion strategies. Rather than introducing a broad, large-scale model, this thesis delineates a nuanced approach to transmission expansion planning that aims to improve model performance and ensure its robustness and scalability while thoughtfully incorporating elements of local and utility-scale flexibility. The novelty of this work lies not only in the scope of local and utility-scale flexibility modeling, but also in the meticulous manner in which these components are woven into power transmission system expansion planning. The research is underpinned by three core objectives: the formulation of advanced optimisation methods designed to efficiently address complex issues across different system configurations and operational scenarios; the careful merging of the representation of local and utility-scale flexibility - highlighting the importance of distributed energy resources (DERs) and integrating utility-scale storage solutions into the transmission planning framework; and the creation of durable, scalable models that can serve as future-proof blueprints for system development. By pursuing these goals, the thesis aims to contribute significantly to the development of more efficient, resilient, and sustainable power systems. Through careful modeling and analysis, it seeks to provide actionable insights and recommendations for optimising transmission system development amidst the low-carbon transition, underscoring the importance of targeted innovation in addressing the evolving challenges facing the sector.
+    </div>
+
+    <div class="bibtex" id="bib11">
+      @article{Alvarez2025improving,<br>
+        title={Improving Modelling for Optimal Expansion Planning of Power Transmission Systems},<br>
+        author={Erik F. Alvarez},<br>
+        year={2025}<br>
+      }
+    </div>
+  </div>
+
   <h2>2024</h2>
   <hr style="width:100%;text-align:left;margin-left:0">
 
