--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       In his spare time, Erik enjoys swimming, running, board games and especially listening to music. He is also passionate about collaborative open source research, the role of clean energy systems in sustainable development and finance strategies.
     </p>
     <p>
-      <b>Research interests:</b> integrated expansion planning; electricity markets, optimal power flow, uncertainty management; integration of DERs; sector coupling; long duration energy storage; system flexibility; open-source energy modeling
+      <b>Research interests:</b> integrated expansion planning; electricity markets, optimal power flow, uncertainty management; integration of DERs; sector coupling; long duration energy storage; system flexibility; open-source energy modeling.
     </p>
   </div>
 
@@ -184,28 +184,28 @@
 <!--  <p>Coming soon...</p>-->
 <!--  <p>I'm involved in projects like:</p>-->
   <ul>
-    <li><strong>2025 - June</strong> – Abstract accepted related to H2-based virtual power plant for presentation at the EURO 2025 Leeds, <a href="https://euro2025leeds.uk/">Conference</a></li>
-    <li><strong>2025 - January</strong> – PhD Defense, Universidad Pontificia Comillas, Madrid, Spain, <a href="https://www.iit.comillas.edu/publicacion/tesis/es/10272/Improving_Modelling_for_Optimal_Expansion_Planning_of_Power_Transmission_Systems">Thesis</a></li>
+    <li><strong>2025 - June</strong> – Abstract accepted related to H2-based virtual power plant for presentation at the EURO 2025 Leeds, <a href="https://euro2025leeds.uk/">Conference</a>.</li>
+    <li><strong>2025 - January</strong> – PhD Defense, Universidad Pontificia Comillas, Madrid, Spain, <a href="https://www.iit.comillas.edu/publicacion/tesis/es/10272/Improving_Modelling_for_Optimal_Expansion_Planning_of_Power_Transmission_Systems">Thesis</a>.</li>
     <li><strong>2024 - October</strong> – New job position at RISE.
-    <li><strong>2024 - July</strong> – Participation in the EEM 2024 conference in Istanbul, Turkey. Presenting a paper on the self-scheduling of a hydrogen-based virtual power plant in day-ahead energy and reserve electricity markets, <a href="https://eem24.khas.edu.tr/">Conference</a></li>
+    <li><strong>2024 - July</strong> – Participation in the EEM 2024 conference in Istanbul, Turkey. Presenting a paper on the self-scheduling of a hydrogen-based virtual power plant in day-ahead energy and reserve electricity markets, <a href="https://eem24.khas.edu.tr/">Conference</a>.</li>
   </ul>
 
   <h2>Tools</h2>
   <p>Contribution in open-source optimisation modelling tools:</p>
   <ul>
-    <li><strong>oHySEM</strong> – <em> optimized Hybrid Systems for Energy and Market management</em>, <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a></li>.
-    <li><strong>openTEPES</strong> – <em> open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em>, <a href="https://opentepes.readthedocs.io/en/latest/">Link</a></li>.
+    <li><strong>oHySEM</strong> – <em> optimized Hybrid Systems for Energy and Market management</em>, <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a>.</li>
+    <li><strong>openTEPES</strong> – <em> open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em>, <a href="https://opentepes.readthedocs.io/en/latest/">Link</a>.</li>
   </ul>
 
   <h2>Selected Projects</h2>
   <p>Contribution in:</p>
   <ul>
-    <li><strong>RISE</strong> – <em>SCALE EU funded project - Smart Charging ALignment for Europe</em>, <a href="https://scale-horizon.eu/">Link</a></li>.
-    <li><strong>IIT-Comillas</strong> – <em>DEFINER EU funded project - Flexible Electricity Demand Management in Markets with Very High Penetration of Renewable Energy</em></li>
-    <li><strong>IIT-Comillas</strong> – <em>openENTRANCE EU funded project - open ENergy TRansition ANalyses for a low-Carbon Economy</em>, <a href="https://openentrance.eu/">Link</a></li>.
-    <li><strong>UNICAMP</strong> – <em>Introduction of the Semidefinite Relaxation Approach in Power System Optimisation Problems</em></li>
-    <li><strong>COES SINAC</strong> – <em>Verification Studies of the Peruvian Electricity System's Target Firm Reserve Margin Update 2017-2020</em>, <a href="https://www.coes.org.pe/Portal/Planificacion/MargenReserva/#">Link</a></li>.
-    <li><strong>COES SINAC</strong> – <em>Transmission Plan Update 2017 - 2026 for the Peruvian Electricity System</em>, <a href="https://www.coes.org.pe/Portal/Planificacion/PlanTransmision/ActualizacionPTT">Link</a></li>.
+    <li><strong>RISE</strong> – <em>SCALE EU funded project - Smart Charging ALignment for Europe</em>, <a href="https://scale-horizon.eu/">Link</a>.</li>
+    <li><strong>IIT-Comillas</strong> – <em>DEFINER EU funded project - Flexible Electricity Demand Management in Markets with Very High Penetration of Renewable Energy</em>.</li>
+    <li><strong>IIT-Comillas</strong> – <em>openENTRANCE EU funded project - open ENergy TRansition ANalyses for a low-Carbon Economy</em>, <a href="https://openentrance.eu/">Link</a>.</li>
+    <li><strong>UNICAMP</strong> – <em>Introduction of the Semidefinite Relaxation Approach in Power System Optimisation Problems</em>.</li>
+    <li><strong>COES SINAC</strong> – <em>Verification Studies of the Peruvian Electricity System's Target Firm Reserve Margin Update 2017-2020</em>, <a href="https://www.coes.org.pe/Portal/Planificacion/MargenReserva/#">Link</a>.</li>
+    <li><strong>COES SINAC</strong> – <em>Transmission Plan Update 2017 - 2026 for the Peruvian Electricity System</em>, <a href="https://www.coes.org.pe/Portal/Planificacion/PlanTransmision/ActualizacionPTT">Link</a>.</li>
   </ul>
 
   <h2>Selected Publications</h2>
