--- a/publications.html
+++ b/publications.html
@@ -129,7 +129,7 @@
   <hr style="width:100%;text-align:left;margin-left:0">
 
   <div class="publication">
-    <b>[PhD Thesis] - Erik F. Alvarez</b>. <em>Improving Modelling for Optimal Expansion Planning of Power Transmission Systems</em>. COMILLAS, 2025.
+    <b>[PhD Thesis] - Erik F. Alvarez</b>. <em>Improving Modelling for Optimal Expansion Planning of Power Transmission Systems</em>. Universidad Pontificia Comillas, Madrid, Spain, 2025.
     <a href="https://www.iit.comillas.edu/publicacion/tesis/es/10272/Improving_Modelling_for_Optimal_Expansion_Planning_of_Power_Transmission_Systems" target="_blank">DOI</a>
     <div class="buttons">
       <button onclick="toggle('abs11')">ABS</button>
@@ -383,7 +383,7 @@
   <hr style="width:100%;text-align:left;margin-left:0">
 
   <div class="publication">
-    <b>[Master Thesis] - Erik F. Alvarez</b>. <em>Semidefinite Relaxation for the Optimal Operation and Expansion Planning of Power Transmission Systems</em>. UNICAMP, 2019.
+    <b>[Master Thesis] - Erik F. Alvarez</b>. <em>Semidefinite Relaxation for the Optimal Operation and Expansion Planning of Power Transmission Systems</em>. Universidade Estadual de Campinas, Campinas, São Paulo, Brazil, 2019.
     <a href="10.13140/RG.2.2.12881.28006" target="_blank">DOI</a>
     <div class="buttons">
       <button onclick="toggle('abs9')">ABS</button>
