--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
     </p>
   </div>
 
+  <hr style="width:100%;text-align:left;margin-left:0">
   <h2>News</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
 <!--  <p>Coming soon...</p>-->
 <!--  <p>I'm involved in projects like:</p>-->
   <ul>
@@ -190,14 +192,19 @@
     <li><strong>2024 - July</strong> – Participation in the EEM 2024 conference in Istanbul, Turkey. Presenting a paper on the self-scheduling of a hydrogen-based virtual power plant in day-ahead energy and reserve electricity markets, <a href="https://eem24.khas.edu.tr/">Conference</a>.</li>
   </ul>
 
+  <hr style="width:100%;text-align:left;margin-left:0">
   <h2>Tools</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
   <p>Contribution in open-source optimisation modelling tools:</p>
   <ul>
     <li><strong>oHySEM</strong> – <em> optimized Hybrid Systems for Energy and Market management</em>, <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a>.</li>
     <li><strong>openTEPES</strong> – <em> open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em>, <a href="https://opentepes.readthedocs.io/en/latest/">Link</a>.</li>
   </ul>
 
+  <hr style="width:100%;text-align:left;margin-left:0">
   <h2>Selected Projects</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
+
   <p>Contribution in:</p>
   <ul>
     <li><strong>RISE</strong> – <em>SCALE EU funded project - Smart Charging ALignment for Europe</em>, <a href="https://scale-horizon.eu/">Link</a>.</li>
@@ -208,7 +215,9 @@
     <li><strong>COES SINAC</strong> – <em>Transmission Plan Update 2017 - 2026 for the Peruvian Electricity System</em>, <a href="https://www.coes.org.pe/Portal/Planificacion/PlanTransmision/ActualizacionPTT">Link</a>.</li>
   </ul>
 
+  <hr style="width:100%;text-align:left;margin-left:0">
   <h2>Selected Publications</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
 
   <div class="publication">
     <b>Erik F. Alvarez</b>, Juan Camilo López, Andrés Ramos, and Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
