--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Erik F. Alvarez – Researcher at RISE. Specializing in power systems, transmission planning, and optimization models.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Erik F. Alvarez – Researcher at RISE. Specializing in power systems, and optimization models.">
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1">-->
   <title>Erik F. Alvarez</title>
   <link rel="icon" type="image/png" href="icon.png">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
