--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
           border-left: 3px solid #007e7a;
         }
   </style>
+
+<script>
+  function toggle(id) {
+    const el = document.getElementById(id);
+    el.style.display = el.style.display === "block" ? "none" : "block";
+  }
+</script>
+
 </head>
 <body>
 <header class="top-nav">
