--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <hr style="width:100%;text-align:left;margin-left:0">
   <h2>Tools</h2>
   <hr style="width:100%;text-align:left;margin-left:0">
-  <p>Contribution in open-source optimisation modelling tools:</p>
+  <p>Contribution in open-source optimisation modelling:</p>
   <ul>
     <li><strong>oHySEM</strong> – <em> optimized Hybrid Systems for Energy and Market management</em>, <a href="https://ohysem.readthedocs.io/en/latest/index.html#">Link</a>.</li>
     <li><strong>openTEPES</strong> – <em> open Generation, Storage, and Transmission Operation and Expansion Planning Model with RES and ESS</em>, <a href="https://opentepes.readthedocs.io/en/latest/">Link</a>.</li>
